--- a/buscar.html
+++ b/buscar.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Página Web</title>
-    <link rel="stylesheet" href="busqueda.css">
-    <script src="busqueda.js" defer></script>
+    <link rel="stylesheet" href="css/buscar.css">
+    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <script src="js/displayProducts.js"></script>
+    <script src="js/buscar.js" defer></script>
 </head>
 <body>
-
     <nav>
-        <a href="busqueda.html">Busqueda</a>
-        <a href="#">Link 2</a>
+        <a href="buscar.html">Buscar</a>
+        <a href="publicar.html">Publicar</a>
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
     </nav>
