--- a/buscar.html
+++ b/buscar.html
@@ -14,8 +14,8 @@
     <nav>
         <a href="buscar.html">Buscar</a>
         <a href="publicar.html">Publicar</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 4</a>
+        <a href="atencion.html">Atencion</a>
+        <a href="interes.html">Interes</a>
     </nav>
     <input type="text" id="searchField" placeholder="Buscar...">
 
