--- a/buscar.html
+++ b/buscar.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="buscar.html">Buscar</a>
         <a href="publicar.html">Publicar</a>
-        <a href="atencion.html">Atencion</a>
+        <a href="asistencia.html">Asistencia</a>
         <a href="interes.html">Interes</a>
     </nav>
     <input type="text" id="searchField" placeholder="Buscar...">
