--- a/asistencia.html
+++ b/asistencia.html
@@ -20,6 +20,7 @@
         <a href="publicar.html">Publicar</a>
         <a href="asistencia.html">Asistencia</a>
         <a href="interes.html">Interes</a>
+        <a href="comercios_mapas.html">Comercios</a>
     </nav>
     <div class="main">
         <h1>Centros y Móviles de Asistencia</h1>
