--- a/publicar.html
+++ b/publicar.html
@@ -16,6 +16,7 @@
         <a href="publicar.html">Publicar</a>
         <a href="asistencia.html">Asistencia</a>
         <a href="interes.html">Interes</a>
+        <a href="comercios_mapas.html">Comercios</a>
     </nav>
     <section>
         <form>
