--- a/interes.html
+++ b/interes.html
@@ -14,6 +14,7 @@
         <a href="publicar.html">Publicar</a>
         <a href="asistencia.html">Asistencia</a>
         <a href="interes.html">Interes</a>
+        <a href="comercios_mapas.html">Comercios</a>
     </nav>
     <section id="events">
         <h2>Eventos</h2>
